# txt2tok

./: CMakeLists.txt  README.md
assets/: grammar.ebnf  tests.udl
tests/: CMakeLists.txt
tests/src/: tests.cpp
txt2tok/: CMakeLists.txt
txt2tok/include/: cursor.hpp  line.hpp  scanner.hpp  scanntable.hpp  scantable.hpp  source.hpp  stbuilder.hpp  token.hpp
txt2tok/include/txt2tok/: cursor.hpp  scanner.hpp  scantable.hpp  source.hpp  srcreader.hpp  token.hpp
txt2tok/src/: cursor.cpp  line.cpp  source.cpp  srcreader.cpp  token.cpp
